# smolcrush

./: Cargo.toml  README.md
src/: lib.rs  rand.rs
src/pseudo/: kiss.rs  mod.rs  splitmix32.rs  splitmix64.rs  swb32.rs  swb64.rs  wyrand.rs  wyrand64.rs  xorshift1024plus.rs  xorshift1024star.rs  xorshift128.rs  xorshift128plus.rs  xorshift32.rs  xorshift64.rs  xorshift64star.rs  xorwow.rs
