[package]
name = "smolcrush"
authors = ["satvrn"]
description = "A cute and smol RNG library."
homepage = "https://github.com/notsatvrn/smolcrush"
repository = "https://github.com/notsatvrn/smolcrush"
readme = "README.md"
keywords = ["rng", "random"]
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
getrandom = { version = "0.2.8", optional = true }
rand_core = { version = "0.6.4", optional = true }
zeroize = { version = "1.5.7", features = ["derive"], optional = true }

[target.'cfg(target = "wasm32")'.dependencies]
getrandom = { version = "0.2.8", features = ["js"], optional = true }

[features]
default = ["wyrand", "xorwow"]
system-rng = ["dep:getrandom"]
32bit = ["kiss", "splitmix32", "xorshift32", "xorshift128", "xorwow"]
64bit = ["splitmix64", "xorshift64", "xorshift64star", "xorshift128plus", "xorshift1024plus", "xorshift1024star"]
all = ["32bit", "64bit"]

# splitmix
splitmix32 = []
splitmix64 = []

# wyrand
wyrand = []

# xorshift
xorshift32 = []
xorshift64 = []
xorshift64star = []
xorshift128 = ["splitmix32"]
xorshift128plus = ["splitmix64"]
xorshift1024plus = ["splitmix64"]
xorshift1024star = ["splitmix64"]

# other George Marsaglia PRNGs
kiss = []
swb32 = ["splitmix32"]
swb64 = ["splitmix64"]

# xorwow
xorwow = ["splitmix32"]
